tests/parser/statement_case_err2.expected
Syntax Error: line 3:
Unexpected token (TOK_KEY_OF, 'of'), likely missing a(n)  
  'TOK_LPAREN' or
  'TOK_KEY_NOT' or
Possibly due to malformed or missing:
  Non-terminal: 'Array' or
  Non-terminal: 'Expression'
