tests/parser/statement_case_err2.mtp
begin
	(*missing condition*)
	case  of
	first:
		s := 0;
	second:
		s := 1
	else
		s := 99
	end
end
.